--- a/resources/css/react-select.css
+++ b/resources/css/react-select.css
@@ -8,7 +8,7 @@
   .custom-react-select__control {
     @apply flex min-h-[40px] w-full
       rounded-md border border-input
-      bg-background px-3 py-1
+      bg-transparent px-3 py-1
       text-sm text-foreground
       shadow-sm
       transition-colors;
